--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="./index.html">Download Excursion (Coming soon!)</a>
-
+    <a class="link" href="./index.html">Download Excursion (Coming soon!)</a>
+    <video src="./resources/videos/excursion.mp4" alt="Excursion video"</video>
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="./resources/images/camp.jpg" alt="Tent camping at night in the dessert">
+    <img src=".resources/images/phone.png" alt="Phone icon">
+    <h2>Coming soon for iPhone and Android</h2>
+    <a class="link" href="./index.html">Download Excursion (Coming soon!)</a>
   </body>
 </html>
