--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <img src="./resources/images/camp.jpg" alt="Tent camping at night in the dessert">
     </p>
     <p>
-      <img src=".resources/images/phone.png" alt="Phone icon">
+      <img src="./resources/images/phoneicon.png" alt="Phone icon">
     </p>
     <h2>Coming soon for iPhone and Android</h2>
     <a class="link" href="./index.html">Download Excursion (Coming soon!)</a>
