--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1>Discover hidden places in the world around you</h1>
     <a class="link" href="./index.html">Download Excursion (Coming soon!)</a>
     <p>
-      <video src="./resources/videos/excursion.mp4" type="video/mp4"></video>
+      <video autoplay muted loop src="./resources/videos/excursion.mp4" type="video/mp4"></video>
     </p>
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
@@ -21,5 +21,6 @@
     </p>
     <h2>Coming soon for iPhone and Android</h2>
     <a class="link" href="./index.html">Download Excursion (Coming soon!)</a>
+    <p class="footer">© Excursion</p>
   </body>
 </html>
