--- a/index.html
+++ b/index.html
@@ -6,21 +6,36 @@
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
+    <!-- Landing Section -->
+
     <h1>Discover hidden places in the world around you</h1>
     <a class="link" href="./index.html">Download Excursion (Coming soon!)</a>
     <p>
-      <video autoplay muted loop src="./resources/videos/excursion.mp4" type="video/mp4"></video>
+      <video autoplay muted loop>
+        <src="./resources/videos/excursion.mp4" type="video/mp4">
+      </video>
     </p>
+
+    <!-- Information Section -->
+
     <h2>Your personal travel guide</h2>
     <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
     <p>
       <img src="./resources/images/camp.jpg" alt="Tent camping at night in the dessert">
     </p>
+
+    <!-- Coming Soon Section -->
+
     <p>
       <img src="./resources/images/phoneicon.png" alt="Phone icon">
     </p>
     <h2>Coming soon for iPhone and Android</h2>
     <a class="link" href="./index.html">Download Excursion (Coming soon!)</a>
+
+    <!-- Footer -->
+
     <p class="footer">© Excursion</p>
+    
   </body>
 </html>
