--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <a class="link" href="./index.html">Download Excursion (Coming soon!)</a>
     <p>
       <video autoplay muted loop>
-        <src="./resources/videos/excursion.mp4" type="video/mp4">
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
       </video>
     </p>
 
@@ -36,6 +36,6 @@
     <!-- Footer -->
 
     <p class="footer">© Excursion</p>
-    
+
   </body>
 </html>
